fix spacing on buttons

--- a/sass/button.scss
+++ b/sass/button.scss
@@ -22,7 +22,7 @@
 .button--alt {
   height: var(--height-button);
   border-radius: var(--border-radius);
-  padding: var(--spacing-s) var(--spacing-s);
+  padding: var(--spacing-s) var(--spacing-m);
   line-height: 1.2;
   font-weight: var(--font-weight-bold);
 }
